📦 Port special items